# streamlit-form

./: README.md  app.py  pyproject.toml  requirements.txt
src/: main.py
src/components/: form.py  webhook_sender.py
