[project]
name = "streamlit-form"
version = "0.1.0"
description = ""
authors = [
    { name = "papolonio", email = "p.apolonio20@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "components", from = "src/components" }
]
